css/style.css
@font-face {
  font-family: 'ChineseRocks';
  src: url('../fonts/chinese_rocks_rg-webfont.woff2') format('woff2');
  font-weight: 400;
  font-style: normal;
}

:root {
  --main-background: #2a1326;
  --main-shadow: #a71d22;
  --panel-background: #fdfad5;
  --panel-border: #802c54;
  --card-background: #f5d89d;
  --card-border: #a51e23;
  --card-text: #eb0006;
  --input-text: hsl(36, 35%, 20%);
  --input-placeholder: hsl(37, 23%, 45%);
  --fade-delay: 0.125s;
  --fade-time: 0.25s;
}

body {
  background: var(--main-background);
  margin: 0px;
  height: 100vh;
  width: 100vw;
  font-family: ChineseRocks;
  font-size: 24px;
  overflow-x: hidden;
}

#container {
  box-sizing: border-box;
  display: grid;
  width: 100vw;
  height: 100vh;
  grid-template-rows: minmax(102px, max-content) 1fr;
  grid-template-columns: 1fr;
  grid-template-areas: 'data' 'results';
}

#data {
  display: flex;
  background: var(--panel-background);
  padding: 15px;
  width: 100%;
  box-sizing: border-box;
  flex: 0 0;
  overflow: hidden;
  border-bottom: 6px solid var(--panel-border);
  z-index: 2;
  grid-area: data;
  box-shadow: 0 0 5px black;
}

input, button {
  font-family: inherit;
  font-size: inherit;
}

input {
  flex: 1 1;
  margin-right: 15px;
  border: 6px solid var(--card-border);
  background: var(--card-background);
  color: var(--input-text);
  box-sizing: border-box;
  padding: 11px;
  min-width: 0;
}

input::placeholder {
  color: var(--input-placeholder);
}

#results {
  display: flex;
  flex-flow: column wrap;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  overflow-y: auto;
  overflow-x: hidden;
  grid-area: results;
}

.top-spacer {
  height: 20px;
  width: 100%;
}

.shirt {
  background-color: var(--panel-background);
  border: 6px solid var(--panel-border);
  padding: 15px;
  height: 360px; /*260*/
  transition: all 0.5s linear;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 300px 1fr; /*200px 1fr*/
  grid-gap: 15px;
  align-items: stretch;
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 20px;
  width: 300px;
  max-width: 100%;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
}

img {
  grid-column: 1 / span 2;
  grid-row: 1;
  display: block;
  box-sizing: border-box;
  object-fit: cover;
  max-width: 300px;
  width: 100%;
}

.download, #submit {
  display: flex;
  align-items: center;
  justify-content: center;
  background: var(--card-border);
  border: none;
  color: white;
  cursor: pointer;
  text-decoration: none;
}

#submit {
  white-space: nowrap;
  min-width: 64px;
}

.submit-text, .submit-icon {
  padding: 0 0.5rem;
}

.submit-icon {
  display: none;
}

.info {
  pointer-events: none;
  background: rgba(0, 0, 0, 0.6);
  backdrop-filter: blur(1px);
  z-index: 1;
  grid-column: 1 / span 2;
  grid-row: 1;
  color: white;
  box-sizing: border-box;
  padding: 15px;
  text-shadow: 2px 2px 1px rgba(0,0,0,0.5);
  overflow: hidden;
  max-width: 300px;
  max-height: 300px;
  display: flex;
  align-items: stretch;
  justify-content: stretch;
  cursor: pointer;
  transition-delay: var(--fade-delay);
  transition-timing-function: cubic-bezier(0.45, 0.05, 0.55, 0.95);
}

.info-inner {
  display: flex;
  flex: 1 0;
  flex-direction: column;
  align-items: center;
  text-align: center;
  justify-content: flex-end;
  transition-timing-function: ease;
}

.info > .info-inner > div {
  margin-bottom: 0.125rem;
  color: #bbb;
}

.spacer {
  flex-grow: 1;
}

.info > .info-inner > .slogan {
  font-size: 1.4em;
  margin-bottom: 0.5rem;
  color: #fff;
}

.designer {
  margin-top: 0.125rem;
  color: #bbb;
  font-size: 0.675em;
}

.info > .info-inner > div:not(.slogan) {
  font-size: 0.9em;
}

.info span {
  color: #fff;
}

.info, .info-inner {
  opacity: 0;
  transition: opacity var(--fade-time);
}

.shirt .info-inner {
  transition-delay: 0s;
}

.shirt:hover .info, .shirt:focus-within .info {
  pointer-events: all;
  opacity: 1;
  transition-delay: 0s;
}

.shirt:hover .info-inner, .shirt:focus-within .info-inner {
  opacity: 1;
  transition-delay: var(--fade-delay);
}

.submit-icon::before {
  content: url('../images/arrow.svg');
  display: block;
  width: 18px;
}

#submit.loading {
  pointer-events: none;
}

#submit.loading .submit-text, #submit.loading .submit-icon {
  visibility: hidden !important;
}

#submit .spinner {
  display: none;
  width: 32px;
  height: 32px;
  border-radius: 32px;
  clip: rect(0, 32px, 16px, 16px);
  border: 4px solid #fff;
  animation: spin 0.75s linear infinite forwards;
  position: absolute;
  box-sizing: border-box;
}

#submit.loading .spinner {
  display: block;
}

.shirt.loading .info {
  display: none;
}

.shirt.loading {
  border-color: transparent;
  background: #f4f4f4;
  user-select: none;
}

.shirt.loading img {
  text-indent: -9999px;
  background-size: 300px 300px, 600px 300px;
  background: linear-gradient(-70deg, transparent 0% 30%, #e5e5e5 48% 52%, transparent 70% 100%) top left no-repeat, #d7d7d7;
  animation: shimmer 4s linear infinite forwards;
}

.shirt.loading a.download {
  pointer-events: none;
  color: transparent;
  border-color: transparent;
  background: #d7d7d7;
}

@media only screen and (max-width: 500px) {
  .submit-text {
    display: none;
  }
  .submit-icon {
    display: block;
  }
  .shirt .info {
    pointer-events: none !important;
  }
}

@media only screen and (max-width: 300px) {
  .save-text {
    display: none;
  }
}

@keyframes shimmer {
  0% {
    background-position-x: -300px;
  }
  25%, 100% {
    background-position-x: 300px;
  }
}

@keyframes spin {
  from { transform: rotate(0); }
  to { transform: rotate(360deg); }
}

